# flo-shani-aesni

./: CMakeLists.txt  Makefile  README.md
1Xmssdraft07sha256_nway/: CMakeLists.txt  Makefile  README.md  flo-xmss-vec.h  functions.c  functions.h  hash_address.h  mainXMSS.c  treehash.c  treehash.h  treetraversal.c  wots.c  xmss.c  xmssBib.c
1Xmssdraft07sha256_nway/hash/: sha2_4sms.c  sha2_8sms.c  sha2supercop.c  sha2supercop.h  sph_sha2.h  sph_types.h
aegis/: CMakeLists.txt  aegis_opt.c  aegis_ref.c  flo-aegis.h
aegis/bench/: CMakeLists.txt  bench.c
aegis/include/: aegis.h
aegis/src/: aegis_opt.c  aegis_ref.c
aegis/tests/: CMakeLists.txt  test_aegis.cpp
aes/: CMakeLists.txt  aesni.c  flo-aesni.h
aes/bench/: CMakeLists.txt  bench.c
aes/include/: aesni.h
aes/src/: aesni.c
aes/tests/: CMakeLists.txt  test_aesni_aes.cpp
bench/: CMakeLists.txt  bench_aegis.c  bench_aes.c  bench_sha256.c  bench_xmss_vec.c  clocks.c  clocks.h
cpuid/: CMakeLists.txt  flo-cpuid.c  flo-cpuid.h
prng/: CMakeLists.txt  flo-random.c  flo-random.h
sha256/: CMakeLists.txt  flo-shani.c  flo-shani.h  sha256_vectorized.c
sha256/bench/: CMakeLists.txt  bench.c  clocks.h
sha256/include/: shani.h
sha256/src/: coreshani.c  sha256_vectorized.c  shani.c
sha256/tests/: CMakeLists.txt  test_shani.cpp
tests/: CMakeLists.txt  test_aes.cpp  test_sha256.cpp  test_shani.cpp
